--- a/Day_7/Day_7.Tests/Day_7.Tests.csproj
+++ b/Day_7/Day_7.Tests/Day_7.Tests.csproj
@@ -60,7 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TLSParserTests.cs" />
+    <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
